--- a/style.css
+++ b/style.css
@@ -5,16 +5,84 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: 'Montserrat', sans-serif;
-    background-color: rgb(233, 233, 233);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	font-family: 'Montserrat', sans-serif;
+	background-color: rgb(233, 233, 233);
 }
 
 .wrapper {
-    width: 600px; 
-    background-color: #fff;
-    box-shadow: 0 0 10px #000;
+	width: 600px;
+	background-color: #fff;
+	box-shadow: 0 0 10px #000;
+}
+
+.top {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 200px;
+	background-color: #00ba40;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.top p {
+	margin-top: 10px;
+}
+
+.bottom {
+	padding: 40px 20px;
+}
+
+label {
+	display: block;
+	margin-bottom: 10px;
+	font-size: 22px;
+}
+
+input,
+select {
+	width: 100%;
+	padding: 8px 10px;
+	margin-bottom: 25px;
+	border-radius: 5px;
+	border: 1px solid rgb(185, 185, 185);
+}
+
+.count {
+	display: block;
+	margin: 20px auto;
+	padding: 20px 10px;
+	width: 60%;
+	font-size: 24px;
+	border-radius: 8px;
+	color: #fff;
+	background-color: #00ba40;
+	border: none;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.count:hover {
+	background-color: rgb(0, 168, 59);
+}
+
+.const-info {
+    display: none;
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+.cost {
+    font-weight: bold;
+}
+
+.error {
+    font-size: 18px;
+    color: rgb(199, 63, 29);
+    text-align: center;
 }
